(lang dune 2.9)

(name dkml-option-vcpkg)

(generate_opam_files true)

(source
 (github diskuv/dkml-option-vcpkg))
(license Apache-2.0)
(authors "Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>")
(maintainers "opensource+diskuv-ocaml@support.diskuv.com")

(package
 (name dkml-option-vcpkg)
 (synopsis "Configures DKML components to support vcpkg")
 (description
  "Configures DKML components to support vcpkg"))
